# first-ai

./: .gitignore  README.md  file_tree.txt
.cursor/rules/: docs.mdc  plan.mdc
backend/: main.py  pyproject.toml
backend/app/: main.py
docs/: architecture.md  features.md  projectbrief.md
frontend/src/app/: layout.tsx  page.tsx
ml/: README.md  backend_api.py  requirements.txt
ml/config/: README.md
ml/data/: README.md
ml/data/notebooks/: README.md
ml/src/: README.md  inference.py
ml/src/models/: README.md
ml/src/models/handwritten_digit/: README.md  mnist_model.joblib  train_and_save.py
ml/src/models/sample_model/: sample_model.joblib  train_and_save.py
ml/src/models/sample_model2/: train_and_save.py
