[project]
name = "ml-prediction-api"
version = "0.1.0"
description = "Machine Learning Prediction API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.11.4",
]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.4"
